--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "deploy": "ng deploy --base-href=/politicz-fe/"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +30,7 @@
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jest": "^29.2.0",
+    "angular-cli-ghpages": "^1.0.3",
     "jasmine-core": "~4.1.0",
     "jest": "^29.2.1",
     "jest-preset-angular": "^12.2.2",
