--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "deploy": "ng deploy --base-href=/politicz-fe/"
+    "deploy": "ng deploy --base-href=/politicz-fe/ --repo=politicz-fe --no-silent"
   },
   "private": true,
   "dependencies": {
