--- a/.github/workflows/build-test-deploy-master.yml
+++ b/.github/workflows/build-test-deploy-master.yml
@@ -41,7 +41,7 @@ jobs:
           npm run build -- --configuration production
       - name: Test
         run: |
-          npm run test -- --configuration production
+          npm run test
       - name: Conventional Changelog Action
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
