--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "deploy": "ng deploy --base-href=/politicz-fe/"
+    "deploy": "ng deploy --base-href=https://politi-cz.github.io/politicz-fe"
   },
   "private": true,
   "dependencies": {
