--- a/.github/workflows/build-test-deploy-master.yml
+++ b/.github/workflows/build-test-deploy-master.yml
@@ -61,4 +61,14 @@ jobs:
 
       - name: Deploy
         run: |
-          npm run deploy --no-silent
+          run: |
+          git config --global user.name $user_name
+          git config --global user.email $user_email
+          git remote set-url origin https://${github_token}@github.com/${repository}
+          npm run deploy
+        env:
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          github_token: ${{ secrets.TOKEN_GITHUB_ACTION }}
+          deploy_branch: gh-pages
+          repository: ${{ github.repository }}
