--- a/.github/workflows/build-test-deploy-master.yml
+++ b/.github/workflows/build-test-deploy-master.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install and build
-        run: npm install && npm run gh-build
+        run: npm ci && npm run build-prod
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
