--- a/.github/workflows/build-test-pull-request-master.yml
+++ b/.github/workflows/build-test-pull-request-master.yml
@@ -1,9 +1,8 @@
-name: Build, test and deploy master
+name: Build and test pull request to master
 
 on:
-  push:
-    branches:
-      - 'master'
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
@@ -47,9 +46,3 @@ jobs:
 
       - name: Test
         run: npm run test
-
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: dist/politicz-fe # The folder the action should deploy.
