--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/router": "^14.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@ngxs/logger-plugin": "^3.7.5",
+    "@ngxs/store": "^3.7.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
