--- a/.github/workflows/build-test-pull-request-master.yml
+++ b/.github/workflows/build-test-pull-request-master.yml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: Install dependencies
-        run: npm i --force
+        run: npm ci
 
       - name: Build
         run: npm run build-prod && cp dist/politicz-fe/index.html dist/politicz-fe/404.html
