--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "homepage": "https://politi-cz.github.io/politicz-fe",
-  "name": "politicz-fe",
   "version": "0.0.0",
+  "name": "politicz-fe",
+  "homepage": "https://politi-cz.github.io/politicz-fe",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -13,47 +14,46 @@
     "test:coverage": "jest --coverage",
     "lint": "ng lint"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.4",
-    "@angular/cdk": "^15.0.3",
+    "@angular/cdk": "^15.0.4",
     "@angular/common": "^15.0.4",
     "@angular/compiler": "^15.0.4",
     "@angular/core": "^15.0.4",
     "@angular/forms": "^15.0.4",
-    "@angular/material": "^15.0.3",
+    "@angular/material": "^15.0.4",
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@ngxs/store": "^3.7.5",
-    "dayjs": "^1.11.6",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@ngxs/store": "^3.7.6",
+    "dayjs": "^1.11.7",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.4.1",
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.4",
-    "@angular-eslint/builder": "15.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin": "15.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin-template": "15.0.0-alpha.5",
-    "@angular-eslint/schematics": "15.0.0-alpha.5",
-    "@angular-eslint/template-parser": "15.0.0-alpha.5",
-    "@angular/cli": "~15.0.4",
+    "@angular-devkit/build-angular": "^15.0.5",
+    "@angular-eslint/builder": "^15.1.0",
+    "@angular-eslint/eslint-plugin": "^15.1.0",
+    "@angular-eslint/eslint-plugin-template": "^15.1.0",
+    "@angular-eslint/schematics": "^15.1.0",
+    "@angular-eslint/template-parser": "^15.1.0",
+    "@angular/cli": "^15.0.5",
     "@angular/compiler-cli": "^15.0.4",
-    "@types/jest": "^29.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "angular-cli-ghpages": "^1.0.3",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@types/jest": "^29.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "angular-cli-ghpages": "^1.0.5",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jasmine-core": "~4.1.0",
-    "jest": "^29.3.1",
+    "jasmine-core": "^4.5.0",
+    "jest": "^28.0.0",
     "jest-preset-angular": "^12.2.3",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.2",
     "prettier-eslint": "^15.0.1",
-    "typescript": "~4.8.4"
+    "typescript": "^4.8.2"
   }
 }
