--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "root": true,
   "ignorePatterns": ["projects/**/*"],
+  "plugins": ["unused-imports"],
   "overrides": [
     {
       "files": ["*.ts"],
@@ -14,6 +15,12 @@
         "plugin:prettier/recommended"
       ],
       "rules": {
+        "no-unused-vars":"off",
+        "unused-imports/no-unused-imports": "error",
+        "unused-imports/no-unused-vars": [
+          "warn",
+          { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+        ],
         "@angular-eslint/directive-selector": [
           "error",
           {
