--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jasmine-core": "^4.5.0",
     "jest": "^28.0.0",
     "jest-preset-angular": "^12.2.3",
