--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "allowedCommonJsDependencies": [
+              "dayjs",
+              "moment"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
