--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
-{
+{//TODO: Add html linting, lint everything in pipeline, enforce semicolons, look for most used eslintr configs
   "root": true,
   "ignorePatterns": ["projects/**/*"],
   "plugins": ["unused-imports"],
