--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,14 @@
 {
+  "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "singleQuote": true,
   "semi": true,
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
+  "singleQuote": true,
   "trailingComma": "es5",
-  "bracketSameLine": true,
-  "printWidth": 120,
-  "endOfLine": "auto"
+  "bracketSpacing": true,
+  "jsxSingleQuote": false,
+  "arrowParens": "always",
+  "proseWrap": "never",
+  "htmlWhitespaceSensitivity": "strict",
+  "endOfLine": "lf"
 }
