--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "ng lint"
+    "lint": "eslint --fix . && prettier --write ."
   },
   "dependencies": {
     "@angular/animations": "^15.0.4",
@@ -30,9 +30,12 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@ngxs/store": "^3.7.6",
     "dayjs": "^1.11.7",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "rxjs": "^7.8.0",
     "tslib": "^2.4.1",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.12.0",
+    "jest": "^28.0.0",
+    "jest-preset-angular": "^12.2.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.5",
@@ -47,13 +50,13 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "angular-cli-ghpages": "^1.0.5",
-    "eslint": "^8.31.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jasmine-core": "^4.5.0",
-    "jest": "^28.0.0",
-    "jest-preset-angular": "^12.2.3",
     "prettier": "^2.8.2",
     "prettier-eslint": "^15.0.1",
     "typescript": "^4.8.2"
