Finish eslint setup

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -10,5 +10,6 @@
   "arrowParens": "always",
   "proseWrap": "never",
   "htmlWhitespaceSensitivity": "strict",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "bracketSameLine": true
 }
