--- a/.github/workflows/build-test-pull-request-master.yml
+++ b/.github/workflows/build-test-pull-request-master.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Lint
+        run: npm run lint
+
       - name: Build
         run: npm run build-prod && cp dist/politicz-fe/index.html dist/politicz-fe/404.html
 
