--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,34 @@
-{//TODO: Add html linting, lint everything in pipeline, enforce semicolons, look for most used eslintr configs
+{
   "root": true,
   "ignorePatterns": ["projects/**/*"],
-  "plugins": ["unused-imports"],
+  "plugins": ["unused-imports", "@typescript-eslint", "import", "prettier"],
   "overrides": [
     {
       "files": ["*.ts"],
       "parserOptions": {
-        "project": ["tsconfig.json"],
-        "createDefaultProgram": true
+        "project": "./tsconfig.eslint.json"
       },
       "extends": [
+        "airbnb-typescript/base",
+        "prettier",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
-        "plugin:prettier/recommended"
+        "plugin:import/typescript"
       ],
+      "parser": "@typescript-eslint/parser",
       "rules": {
-        "no-unused-vars":"off",
+        "no-unused-expressions": "off",
+        "@typescript-eslint/no-unused-expressions": "warn",
+        "no-unused-vars": "off",
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
           "warn",
-          { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+          {
+            "vars": "all",
+            "varsIgnorePattern": "^_",
+            "args": "after-used",
+            "argsIgnorePattern": "^_"
+          }
         ],
         "@angular-eslint/directive-selector": [
           "error",
@@ -41,8 +50,8 @@
     },
     {
       "files": ["*.html"],
-      "extends": ["plugin:prettier/recommended"],
-
+      "extends": ["prettier"],
+      "parser": "@angular-eslint/template-parser",
       "rules": {
         "prettier/prettier": ["error", { "parser": "angular" }]
       }
