--- a/angular.json
+++ b/angular.json
@@ -101,7 +101,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+            "lintFilePatterns": ["src/app/**/*.ts", "src/**/*.html"]
           }
         }
       }
