--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@ngxs/store": "^3.7.6",
     "dayjs": "^1.11.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "jest": "^28.0.0",
+    "jest-preset-angular": "^12.2.3",
     "rxjs": "^7.8.0",
     "tslib": "^2.4.1",
-    "zone.js": "^0.12.0",
-    "jest": "^28.0.0",
-    "jest-preset-angular": "^12.2.3"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.5",
@@ -48,6 +48,7 @@
     "@angular/cli": "^15.0.5",
     "@angular/compiler-cli": "^15.0.4",
     "@types/jest": "^29.2.5",
+    "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "angular-cli-ghpages": "^1.0.5",
