--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "target": "es2020",
     "module": "es2020",
     "lib": ["es2020", "dom"],
+    "types": ["node"],
     "esModuleInterop": true,
     "strictPropertyInitialization": false
   },
