--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@auth0/auth0-angular": "^2.0.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@ngxs/store": "^3.7.6",
     "dayjs": "^1.11.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "jest": "^28.0.0",
+    "jest-preset-angular": "^12.2.3",
     "rxjs": "^7.8.0",
     "tslib": "^2.4.1",
-    "zone.js": "^0.12.0",
-    "jest": "^28.0.0",
-    "jest-preset-angular": "^12.2.3"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.5",
