--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@auth0/auth0-angular": "^2.0.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@ngxs/storage-plugin": "^3.8.0",
     "@ngxs/store": "^3.8.0",
     "dayjs": "^1.11.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "jest": "^28.0.0",
     "jest-preset-angular": "^12.2.3",
+    "jwt-decode": "^3.1.2",
     "rxjs": "^7.8.0",
     "tslib": "^2.4.1",
     "zone.js": "^0.12.0"
