--- a/package.json
+++ b/package.json
@@ -16,37 +16,40 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^15.0.4",
-    "@angular/cdk": "^15.0.4",
-    "@angular/common": "^15.0.4",
-    "@angular/compiler": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/material": "^15.0.4",
-    "@angular/material-moment-adapter": "^15.1.1",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/platform-browser-dynamic": "^15.0.4",
-    "@angular/router": "^15.0.4",
+    "@angular/animations": "^15.2.5",
+    "@angular/cdk": "^15.2.5",
+    "@angular/common": "^15.2.5",
+    "@angular/compiler": "^15.2.5",
+    "@angular/core": "^15.2.5",
+    "@angular/forms": "^15.2.5",
+    "@angular/material": "^15.2.5",
+    "@angular/material-moment-adapter": "^15.2.5",
+    "@angular/platform-browser": "^15.2.5",
+    "@angular/platform-browser-dynamic": "^15.2.5",
+    "@angular/router": "^15.2.5",
+    "@auth0/auth0-angular": "^2.0.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@ngxs/store": "^3.7.6",
+    "@ngxs/storage-plugin": "^3.8.0",
+    "@ngxs/store": "^3.8.0",
     "dayjs": "^1.11.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "jest": "^28.0.0",
+    "jest-preset-angular": "^12.2.3",
+    "jwt-decode": "^3.1.2",
     "rxjs": "^7.8.0",
     "tslib": "^2.4.1",
-    "zone.js": "^0.12.0",
-    "jest": "^28.0.0",
-    "jest-preset-angular": "^12.2.3"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.5",
+    "@angular-devkit/build-angular": "^15.2.4",
     "@angular-eslint/builder": "^15.1.0",
     "@angular-eslint/eslint-plugin": "^15.1.0",
     "@angular-eslint/eslint-plugin-template": "^15.1.0",
     "@angular-eslint/schematics": "^15.1.0",
     "@angular-eslint/template-parser": "^15.1.0",
-    "@angular/cli": "^15.0.5",
-    "@angular/compiler-cli": "^15.0.4",
+    "@angular/cli": "^15.2.4",
+    "@angular/compiler-cli": "^15.2.5",
     "@types/jest": "^29.2.5",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
