--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,12 @@
             "allowedCommonJsDependencies": ["dayjs", "moment"],
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/theme.scss", "src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/styles"
+              ]
+            }
           },
           "configurations": {
             "production": {
