--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,11 @@
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": ["dayjs", "moment"],
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/theme.scss", "src/styles.scss"],
+            "styles": ["src/styles/themes/_light-theme.scss", "src/main.scss"],
             "scripts": [],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/assets/styles"
+                "src/styles"
               ]
             }
           },
@@ -96,7 +96,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/theme.scss", "src/styles.scss"],
+            "styles": ["src/styles/themes/_light-theme.scss", "src/main.scss"],
             "scripts": []
           }
         },
