UX/UI improvements + 7-1 Sass design pattern (#37)
* Add todos

* Improve UX/UI, add tooltips, improve responsivnes for sidenav

* Prepare brief readme

* Display text and add button when no politician present in party

* Actions for ppp as dropdown menu

* Animations for search icon, settings icon for party

* Delete unused test

* Improve search input behavior

* Add party quick actions to sidenav

* Improve ability to detect auth user

* Improve political party UX/UI + add utils scss

* Fix politician card responsibility on mobile devices

* Lower padding in container on mobile devices

* Justify text + hyphens for better UX/UI for text in news detail

* move scss variables + shorten variables import

* refactor design architecture to 7-1 Sass pattern

--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,13 @@
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": ["dayjs", "moment"],
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/theme.scss", "src/styles.scss"],
-            "scripts": []
+            "styles": ["src/styles/themes/_light-theme.scss", "src/main.scss"],
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            }
           },
           "configurations": {
             "production": {
@@ -91,7 +96,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/theme.scss", "src/styles.scss"],
+            "styles": ["src/styles/themes/_light-theme.scss", "src/main.scss"],
             "scripts": []
           }
         },
