--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
   "root": true,
-  "ignorePatterns": ["projects/**/*"],
-  "plugins": ["unused-imports", "@typescript-eslint", "import", "prettier"],
+  "ignorePatterns": [
+    "projects/**/*"
+  ],
+  "plugins": [
+    "unused-imports",
+    "@typescript-eslint",
+    "import",
+    "prettier"
+  ],
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "parserOptions": {
         "project": "./tsconfig.eslint.json"
       },
@@ -40,11 +49,16 @@
         "no-console": [
           "error",
           {
-            "allow": ["warn", "error"]
+            "allow": [
+              "warn",
+              "error"
+            ]
           }
         ],
         "no-param-reassign": "error",
-        "@typescript-eslint/no-unused-vars": ["error"],
+        "@typescript-eslint/no-unused-vars": [
+          "error"
+        ],
         "@typescript-eslint/explicit-member-accessibility": [
           "error",
           {
@@ -76,7 +90,10 @@
         "no-empty": "error",
         "no-unexpected-multiline": "error",
         "no-unreachable": "error",
-        "eqeqeq": ["error", "always"],
+        "eqeqeq": [
+          "error",
+          "always"
+        ],
         "no-multi-spaces": "error",
         "block-spacing": "error",
         "camelcase": [
@@ -85,8 +102,14 @@
             "properties": "never"
           }
         ],
-        "comma-dangle": ["error", "always-multiline"],
-        "computed-property-spacing": ["error", "never"],
+        "comma-dangle": [
+          "error",
+          "always-multiline"
+        ],
+        "computed-property-spacing": [
+          "error",
+          "never"
+        ],
         "id-length": [
           "error",
           {
@@ -122,7 +145,10 @@
         ],
         "no-trailing-spaces": "off",
         "no-whitespace-before-property": "error",
-        "operator-linebreak": ["error", "after"],
+        "operator-linebreak": [
+          "error",
+          "after"
+        ],
         "padding-line-between-statements": [
           "error",
           {
@@ -143,10 +169,16 @@
           {
             "blankLine": "always",
             "prev": "*",
-            "next": ["return", "multiline-block-like"]
+            "next": [
+              "return",
+              "multiline-block-like"
+            ]
           }
         ],
-        "quotes": ["error", "single"],
+        "quotes": [
+          "error",
+          "single"
+        ],
         "space-before-blocks": "error",
         "@typescript-eslint/no-explicit-any": "off",
         "@angular-eslint/no-output-on-prefix": "off",
@@ -156,7 +188,10 @@
             "allowArgumentsExplicitlyTypedAsAny": true
           }
         ],
-        "semi": ["error", "always"],
+        "semi": [
+          "error",
+          "always"
+        ],
         "no-unused-expressions": "off",
         "@typescript-eslint/no-unused-expressions": "warn",
         "no-unused-vars": "off",
@@ -189,11 +224,20 @@
       }
     },
     {
-      "files": ["*.html"],
-      "extends": ["prettier"],
+      "files": [
+        "*.html"
+      ],
+      "extends": [
+        "prettier"
+      ],
       "parser": "@angular-eslint/template-parser",
       "rules": {
-        "prettier/prettier": ["error", { "parser": "angular" }]
+        "prettier/prettier": [
+          "error",
+          {
+            "parser": "angular"
+          }
+        ]
       }
     }
   ]
