--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,10 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "projects/**/*"
-  ],
-  "plugins": [
-    "unused-imports",
-    "@typescript-eslint",
-    "import",
-    "prettier"
-  ],
+  "ignorePatterns": ["projects/**/*"],
+  "plugins": ["unused-imports", "@typescript-eslint", "import", "prettier"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "files": ["*.ts"],
       "parserOptions": {
         "project": "./tsconfig.eslint.json"
       },
@@ -49,16 +40,11 @@
         "no-console": [
           "error",
           {
-            "allow": [
-              "warn",
-              "error"
-            ]
+            "allow": ["warn", "error"]
           }
         ],
         "no-param-reassign": "error",
-        "@typescript-eslint/no-unused-vars": [
-          "error"
-        ],
+        "@typescript-eslint/no-unused-vars": ["error"],
         "@typescript-eslint/explicit-member-accessibility": [
           "error",
           {
@@ -90,10 +76,7 @@
         "no-empty": "error",
         "no-unexpected-multiline": "error",
         "no-unreachable": "error",
-        "eqeqeq": [
-          "error",
-          "always"
-        ],
+        "eqeqeq": ["error", "always"],
         "no-multi-spaces": "error",
         "block-spacing": "error",
         "camelcase": [
@@ -102,14 +85,8 @@
             "properties": "never"
           }
         ],
-        "comma-dangle": [
-          "error",
-          "always-multiline"
-        ],
-        "computed-property-spacing": [
-          "error",
-          "never"
-        ],
+        "comma-dangle": ["error", "always-multiline"],
+        "computed-property-spacing": ["error", "never"],
         "id-length": [
           "error",
           {
@@ -145,10 +122,7 @@
         ],
         "no-trailing-spaces": "off",
         "no-whitespace-before-property": "error",
-        "operator-linebreak": [
-          "error",
-          "after"
-        ],
+        "operator-linebreak": ["error", "after"],
         "padding-line-between-statements": [
           "error",
           {
@@ -169,16 +143,10 @@
           {
             "blankLine": "always",
             "prev": "*",
-            "next": [
-              "return",
-              "multiline-block-like"
-            ]
+            "next": ["return", "multiline-block-like"]
           }
         ],
-        "quotes": [
-          "error",
-          "single"
-        ],
+        "quotes": ["error", "single"],
         "space-before-blocks": "error",
         "@typescript-eslint/no-explicit-any": "off",
         "@angular-eslint/no-output-on-prefix": "off",
@@ -188,10 +156,7 @@
             "allowArgumentsExplicitlyTypedAsAny": true
           }
         ],
-        "semi": [
-          "error",
-          "always"
-        ],
+        "semi": ["error", "always"],
         "no-unused-expressions": "off",
         "@typescript-eslint/no-unused-expressions": "warn",
         "no-unused-vars": "off",
@@ -224,12 +189,8 @@
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
-      "extends": [
-        "prettier"
-      ],
+      "files": ["*.html"],
+      "extends": ["prettier"],
       "parser": "@angular-eslint/template-parser",
       "rules": {
         "prettier/prettier": [
